--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -8,7 +8,7 @@
 
 repository:
   # The name of the repository. Changing this will rename the repository
-  name: SpaceShuttleNosecone
+  name: SpaceShuttleRCSNosecone
 
   # A short description of the repository that will show up on GitHub
   description: Ever thought, that you need an actual nosecone for plane parts? This parts addon adds nosecones containing Monopropellant and mostly translational RCS-Thrusters. Ideal for keeping your nose up during reentry! For Kerbal Space Program.
