--- a/GameData/SpaceShuttleRCSNosecones/Parts/long/part.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/long/part.cfg
@@ -1,9 +1,9 @@
 PART
 {
-	name = ssncShort
+	name = ssrn-long
 	module = Part
 	author = Kamik423
-	
+
 	mesh = model.mu
 	scale = 1
 	rescaleFactor = 1
