--- a/GameData/SpaceShuttleRCSNosecones/Parts/short/part.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/short/part.cfg
@@ -1,9 +1,9 @@
 PART
 {
-	name = ssncLong
+	name = ssrn-short
 	module = Part
 	author = Kamik423
-
+	
 	mesh = model.mu
 	scale = 1
 	rescaleFactor = 1
