--- a/GameData/SpaceShuttleRCSNosecones/Config/ghostparts.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Config/ghostparts.cfg
@@ -7,7 +7,7 @@
 
 // creates duplicate part to prevent save game issues because of a part name change
 
-+PART[ssrn-long]:NEEDS[SpaceShuttleRCSNosecone]:LAST[SpaceShuttleRCSNosecone]
++PART[rcsn-long]:NEEDS[SpaceShuttleRCSNosecone]:LAST[SpaceShuttleRCSNosecone]
 {
 	@name = ssncLong
 	!TechRequired = DELETE
@@ -19,7 +19,7 @@
 	@description = This part has been depreciated, kindly use new part.
 }
 
-+PART[ssrn-short]:NEEDS[SpaceShuttleRCSNosecone]:LAST[SpaceShuttleRCSNosecone]
++PART[rcsn-short]:NEEDS[SpaceShuttleRCSNosecone]:LAST[SpaceShuttleRCSNosecone]
 {
 	@name = ssncShort
 	!TechRequired = DELETE
