--- a/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
@@ -1,67 +1,107 @@
+// rcsn-long.cfg v3.0.0.0
+// Space Shuttle RCS Nosecones (RCSN)
+// created: 29 Dec 2014
+// updated: 01 Aug 2022
+
+// this file: CC BY-SA 4.0 by zer0Kerbal
+
 PART
 {
 	name = rcsn-long
 	module = Part
 	author = Kamik423 and zer0Kerbal
 
-	// mesh = model.mu
 	MODEL
 	{
 		model = SpaceShuttleRCSNosecones/Assets/rcsn-long
 	}
 	scale = 1.0
 	rescaleFactor = 1.0
-	bulkheadProfile = srf
-
-
-	scale = 1
-	rescaleFactor = 1
-
+	bulkheadProfile = mk3, srf
 
 	node_stack_bottom = 0, 0, 0, 0, 1, 0, 1
-
 	node_attach = 0, 0, 0, 1, 0, 0, 0
-
-	TechRequired = specializedControl
-	entryCost = 6000
-	cost = 100
-	category = Utility
-	subcategory = 0
-	title = short ssnc
-	manufacturer = Reaction Systems Ltd.
-	description = Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want!
 	attachRules = 1,1,1,1,1
 
-	// --- standard part parameters ---
-	mass = 1.0
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
+	TechRequired = specializedControl
+	entryCost = 9000
+	cost = 1250
+	category = Control
+	subcategory = 0
+
+	title = Mk3 RCS Nosecone - Short
+	manufacturer = Reaction Systems Ltd.
+	description = Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want!
+	tags = #autoLOC_500941 // cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate
+
+	mass = 1.05
+	fuelCrossFeed = true
+
+	dragModelType = default	maximum_drag = 0.1
+	minimum_drag = 0.1
+	angularDrag = 0.5
+
 	crashTolerance = 10
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 3200
-	fuelCrossFeed = true
+
+	maxTemp = 1500
+	skinMaxTemp = 2700
+	emissiveConstant = 0.9
+	thermalMassModifier = 6.0
 
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 200
-		maxAmount = 200
+		amount = 225
+		maxAmount = 225
 	}
 
 	MODULE
 	{
-		name = ModuleRCS
+		name = ModuleRCSFX
+		stagingEnabled = False
 		thrusterTransformName = rcsT
-		thrusterPower = 1
+		thrusterPower = 1.25
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running
 		atmosphereCurve
  		{
   	 		key = 0 260
   			key = 1 100
+			key = 4 0.001
  		}
+	}
+
+	EFFECTS
+	{
+		running
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCSjet
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSjet
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
 	}
 }
