--- a/GameData/SpaceShuttleRCSNosecones/Agencies/Agents.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Agencies/Agents.cfg
@@ -1,6 +1,6 @@
 // Agents.cfg v1.0.0.0
-// MOD-NAME (ABBV)
-// created: 
+// Space Shuttle RCS Nosecones (RCSN)
+// created: 01 Jul 2022
 // updated: 
 
 // this file: CC BY-SA 4.0 by zer0Kerbal
@@ -8,37 +8,13 @@
 AGENT
 {
   name = Reaction Systems Ltd.
-	title = Reaction Systems Ltd.
-	description = Reaction Systems Ltd.
+	title = #RCSN-Agency-titl
+	description = #RCSN-Agency-desc
   
-  logoURL = SpaceShuttleRCSNosecones/Flags/SpaceShuttleRCSNosecones-flag-black
-  logoScaledURL = SpaceShuttleRCSNosecones/Agencies/SpaceShuttleRCSNosecones_scaled
+  logoURL = SpaceShuttleRCSNosecones/Flags/RCSN
+  logoScaledURL = SpaceShuttleRCSNosecones/Agencies/RCSN_scaled
   
   mentality = Pioneer
   mentality = Commercial
+  mentality = Startup
 }
-
-// Agency mentalities
-// * Commercial			[Increased financial stakes, both for success and failure]
-// * Competitive		[competes with companies which we have a negative standing towards, auto-added if any standings set][not impl]
-// * Conglomerate		[]
-// * Startup			[]
-// * Cooperative		[not impl]
-// * Ecomental			[not impl]
-// * Economic			[]
-// * Hasty				[-deadlines -expiry +rep]
-// * Patient			[]	
-// * Industrial			[not impl]	
-// * Perfectionist		[not impl]
-// * Pioneer			[Makes agency more likely to offer a contract to something that's never been done before]
-// * Record				[Flags agency as a record-keeping organization, focuses on contracts about breaking existing records and doing new things]
-// * Scientific			[Agency is more likely to offer science data gathering contracts][not impl]
-// * Stern		 		[Higher Reputation Stakes for both success and failure]
-// * EasyGoing			[Lower Reputation Stakes for both success and failure]
-// * Kerbalminded		[not impl][Sets up conditions against losing Kerbals]
-// * Moral	        	[not impl]
-
-// syntax guidelines
-//
-// standings = agent name string, float
-// mentality = MentalityClass [float]
