--- a/GameData/SpaceShuttleRCSNosecones/Config/SpaceShuttleRCSNosecones.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Config/SpaceShuttleRCSNosecones.cfg
@@ -11,7 +11,7 @@
 {
 	tmp00 = #autoLOC_500111 // aero aircraft booster )cap drag fligh plane rocket speed stab stream 
 	tmp01 = #RCSN-tags
-	@tags = #$tags$ $tmp03$
+	@tags = #$tags$ $tmp00$ $tmp01$
 
 	!tmp00 = DELETE
 	!tmp01 = DELETE
