--- a/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
@@ -29,9 +29,9 @@ PART
 	category = Control
 	subcategory = 0
 
-	title = Mk3 RCS Nosecone - Short
-	manufacturer = Reaction Systems Ltd.
-	description = Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want!
+	title = #RCSN-long-titl
+	manufacturer = #RCSN-Agency-titl
+	description = #RCSN-long-desc
 	tags = #autoLOC_500941 // cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate
 
 	mass = 1.05
