--- a/GameData/SpaceShuttleRCSNosecones/Localization/en-us.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Localization/en-us.cfg
@@ -15,11 +15,11 @@ Localization
 		#RCSN-Agency-titl = Reaction Systems Ltd.
 		#RCSN-Agency-desc = Reaction Systems Ltd.
 
-		#RCSN-tags = rcsn mk3
+		#RCSN-tags = rcsn ssnc mk3
 
 	// Parts
 		#RCSN-long-titl = Mk3 RCS Nosecone - Long
-		#RCSN-long-desc = Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want!
+		#RCSN-long-desc = Long Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want! Slightly heavier and with a little more monopropellant than the short version along with slightly more powerful RCS thrusters.
 
 		#RCSN-short-titl = Mk3 RCS Nosecone - Short
 		#RCSN-short-desc = Space Shuttle Style RCS Nosecone - Perfect for keeping your nose up during to reentry, or just docking. Contains its own Monopropellant too. This one actually looks quite nice with the MKIII cockpit, but use it however you want!
