--- a/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-long.cfg
@@ -19,9 +19,9 @@ PART
 	rescaleFactor = 1.0
 	bulkheadProfile = mk3, srf
 
-	node_stack_bottom = 0, 0, 0, 0, 1, 0, 1
-	node_attach = 0, 0, 0, 1, 0, 0, 0
-	attachRules = 1,1,1,1,1
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0, 1
+	attachRules = 1,1,1,1,0
 
 	TechRequired = specializedControl
 	entryCost = 9000
@@ -37,7 +37,8 @@ PART
 	mass = 1.05
 	fuelCrossFeed = true
 
-	dragModelType = default	maximum_drag = 0.1
+	dragModelType = default
+	maximum_drag = 0.1
 	minimum_drag = 0.1
 	angularDrag = 0.5
 
@@ -81,7 +82,7 @@ PART
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = RCSjet
+				transformName = rcsT
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.02 0.1
@@ -94,7 +95,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSjet
+				transformName = rcsT
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -103,5 +104,18 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}		
+	}
+
+	// Dimensions: x: 1.25, y: 0.92, z: 1.25
+	// Bounding Box Size: 1444.823 liters
+    MODULE
+    {
+        name = ModuleCargoPart
+        packedVolume = 1500
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.8128,0.7112,0.7278, 0.8128,0.7104,0.7222, 1.219,0.4947,1.023, 1.219,1,0.1014, 0.8138,0.7097,0.7222, 0.8138,0.7125,0.7335, 1.863E-07,0.4623,-3.725E-08, 1.25,0.9247,1.25
 	}
 }
