--- a/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-short.cfg
+++ b/GameData/SpaceShuttleRCSNosecones/Parts/rcsn-short.cfg
@@ -15,13 +15,13 @@ PART
 	{
 		model = SpaceShuttleRCSNosecones/Assets/rcsn-short
 	}
-	scale = 1
-	rescaleFactor = 1
-	bulkheadProfiles = mk3, srf
+	scale = 1.0
+	rescaleFactor = 1.0
+	bulkheadProfile = mk3, srf
 
-	node_stack_bottom = 0, 0, 0, 0, 1, 0, 1
-	node_attach = 0, 0, 0, 1, 0, 0, 0
-	attachRules = 1,1,1,1,1
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0, 1
+	attachRules = 1,1,1,1,0
 
 	TechRequired = specializedControl
 	entryCost = 8000
@@ -82,7 +82,7 @@ PART
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = RCSjet
+				transformName = rcsT
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.02 0.1
@@ -95,7 +95,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSjet
+				transformName = rcsT
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -104,5 +104,18 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}		
+	}
+
+	// Dimensions: x: 1.25, y: 0.62, z: 1.25
+	// Bounding Box Size: 975.0731 liters
+    MODULE
+    {
+        name = ModuleCargoPart
+        packedVolume = 1050
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.5341,0.63,0.7222, 0.5341,0.63,0.7222, 1.219,0.6416,0.7239, 1.219,1,0.1002, 0.5341,0.6322,0.7222, 0.5341,0.6278,0.7222, 0,0.312,5.682E-11, 1.25,0.624,1.25
 	}
 }
